--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,14 @@
 	        border: none !important;
 	        box-shadow: none !important;
 	    }
+	    
+	    .footer-copyright {
+	        text-align: center;
+	        text-transform: uppercase;
+	        font-size: 12px;
+	        letter-spacing: 2px;
+	        font-weight: 700;
+	    }
 	    /*MOBILE START*/
 	    /*HERO START*/
 	    
@@ -120,6 +128,19 @@
 	        margin-bottom: 24px;
 	        transition: border-color .3s ease-in;
 	        border: 1px solid #eee;
+	    }
+	    
+	    .grid-wrapper:hover {
+	        border: 1px solid black;
+	    }
+	    
+	    .stretched-link {
+	        text-decoration: none;
+	    }
+	    
+	    .stretched-link:hover {
+	        text-decoration: none;
+	        color: white;
 	    }
 	    
 	    .product-number {
@@ -492,7 +513,16 @@
 	        font-size: 21.6px;
 	        font-weight: 700;
 	    }
-	    /* .article-img-right img { display: inline; width: 60%; margin-left: 0px; } .article-img-left { display: inline; width: 60%; margin-left: 0px; } */
+	    
+	    .pop-up-div {
+	        height: 100px;
+	        line-height: 50px;
+	        align-content: middle;
+	        padding-top: 30px;
+	        position: relative;
+	        position: sticky;
+	        bottom: 0;
+	    }
 	    /*MOBILE ENDS*/
 	    /*TABLET SIZE DEVICES START*/
 	    
@@ -758,6 +788,15 @@
 	        .article-text {
 	            font-size: 16px;
 	        }
+	        .table-button {
+	            background-color: #ff3547;
+	            max-width: 188px;
+	            width: 90%;
+	            height: 50px;
+	            color: white;
+	            font-size: 16px;
+	            font-weight: 700;
+	        }
 	        /*ARTICLE-SECTION-ENDS*/
 	    }
 	    /*DESKTOP SIZE DEVICES ENDS*/
@@ -792,6 +831,9 @@
 	        .hero-content-2 {
 	            grid-area: 2/1/2/2;
 	            box-sizing: border-box;
+	        }
+	        .h2-responsive {
+	            font-size: 170%;
 	        }
 	        .h5-responsive {
 	            font-size: 125%;
@@ -1047,3 +1089,184 @@
 	        /*TABLE FIXED HEADER*/
 	    }
 	    /*LARGE SCREEN DEVICES ENDS*/
+	    
+	    @media only screen and (min-width: 1200px) {
+	        .h1-responsive {
+	            font-size: 250%;
+	        }
+	        .h5-responsive {
+	            font-size: 125%;
+	        }
+	        .navbar-inner {
+	            padding-left: 0px;
+	        }
+	    }
+	    /*RESPONSIVE TABLE STYLING*/
+	    
+	    .sgv_section--alternate {
+	        background: #fefefe;
+	    }
+	    
+	    .sgv_section {
+	        padding: 64px 0;
+	    }
+	    
+	    .wrap {
+	        position: relative;
+	        overscroll-behavior: contain;
+	        overscroll-behavior-x: contain;
+	        overscroll-behavior-y: contain;
+	    }
+	    
+	    .headers {
+	        top: 0;
+	        position: -webkit-sticky;
+	        position: sticky;
+	        z-index: 7;
+	        margin-bottom: 65px;
+	        transform: rotateX(00deg);
+	        -moz-transform: rotateX(0);
+	        -webkit-transform: rotateX(0);
+	        -ms-transform: rotateX(0);
+	        -o-transform: rotateX(0);
+	    }
+	    
+	    .scroller {
+	        overflow-x: hidden;
+	        transform: rotateX(180deg);
+	        -moz-transform: rotateX(180deg);
+	        -webkit-transform: rotateX(180deg);
+	        -ms-transform: rotateX(180deg);
+	        -o-transform: rotateX(180deg);
+	    }
+	    
+	    .scroller,
+	    .tracks {
+	        display: flex;
+	        overflow-y: hidden;
+	        -webkit-overflow-scrolling: touch;
+	    }
+	    
+	    .syncscroll {
+	        height: 100%;
+	    }
+	    
+	    .scenes::-webkit-scrollbar,
+	    .scroller::-webkit-scrollbar {
+	        display: block;
+	        position: sticky;
+	        top: 0;
+	    }
+	    
+	    .syncscroll::-webkit-scrollbar {
+	        background: #f0f0f0;
+	        height: .2em;
+	    }
+	    
+	    .syncscroll::-webkit-scrollbar-thumb {
+	        background: #aaa;
+	        border-radius: 20px;
+	    }
+	    
+	    .track:first-child {
+	        text-align: left;
+	        position: sticky;
+	        position: -webkit-sticky;
+	        top: 0;
+	        left: 0;
+	        z-index: 6;
+	    }
+	    
+	    .track {
+	        background-color: white;
+	        width: 15%;
+	    }
+	    
+	    .heading {
+	        display: flex;
+	        justify-content: center;
+	        align-items: center;
+	        position: -webkit-sticky;
+	        position: sticky;
+	        top: 0;
+	        background: #fff;
+	        padding: 8px 0;
+	        z-index: 1;
+	    }
+	    
+	    table {
+	        text-align: left;
+	        position: relative;
+	        border-collapse: collapse;
+	    }
+	    
+	    th,
+	    td {
+	        padding: 0.25rem;
+	    }
+	    
+	    tr.red th {
+	        background: red;
+	        color: white;
+	    }
+	    
+	    tr.green th {
+	        background: green;
+	        color: white;
+	    }
+	    
+	    tr.purple th {
+	        background: purple;
+	        color: white;
+	    }
+	    
+	    th {
+	        background: white;
+	        position: sticky;
+	        top: 0;
+	        /* Don't forget this, required for the stickiness */
+	        box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+	    }
+	    
+	    .table-wrapper {
+	        position: relative;
+	    }
+	    
+	    .table-sticky-headers {
+	        display: flex;
+	        flex-direction: row;
+	        justify-items: space-around;
+	        justify-content: space-around;
+	        margin-left: 270px;
+	    }
+	    
+	    .table-sticky-headers div {
+	        vertical-align: bottom;
+	    }
+	    
+	    td {
+	        text-align: center;
+	    }
+	    
+	    .bg-grey {
+	        background: #f3f3f3;
+	    }
+	    
+	    .bg-white {
+	        background-color: white;
+	    }
+	    
+	    @media only screen and (max-width: 1199px) {
+	        .sgv_comparion-table-info {
+	            background: #fff;
+	            font-size: 12px;
+	            padding: 2px 0;
+	            text-transform: uppercase;
+	            display: block;
+	            padding-left: 20%;
+	            text-align: center;
+	        }
+	        .track {
+	            flex: 1 0 calc(20% + 2px);
+	        }
+	    }
